# rag

./: .env.example  .env.youtube  ANALYSIS_HUGGINGFACE_REDESIGN.md  QUICK_START_HUGGINGFACE.md  QUICK_START_OPENROUTER.md  pyproject.toml  pytest.ini  rag_cli.py  requirements.txt  rickroll_transcript.txt
.github/: copilot-instructions.md
.kilocode/rules/: projekt.md
Common/: README.md  __init__.py
Common/services/: __init__.py  config_service.py  huggingface_service.py  llm_provider_base.py  neon_service.py  openrouter_service.py  transcription_service.py  youtube_service.py
Common/tests/: __init__.py  test_config_service.py  test_huggingface_service.py  test_neon_service.py  test_openrouter_service.py  test_youtube_service.py
rag_cli/: __init__.py  cli.py
rag_cli/commands/: __init__.py  config.py  help.py  huggingface.py  neon.py  openrouter.py  youtube.py
